--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
     <title>Sign up</title>
+    <link href="Assets/Ascension-logo.svg" rel="icon"  type="image/x-icon" />
 </head>
 
 <body>
