Add mobile compatibility

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -11,7 +12,7 @@
     <link href="Assets/Ascension-logo.svg" rel="icon"  type="image/x-icon" />
 </head>
 
-<body>
+<body ontouchstart="">
     <div class="container">
         <h1 class="company">
             Ascension™
