--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- Mobile compability -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap"
